--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <h1 class="img__title">Developemt.</h1>
     </div>
     <header class="main-header">
-        <a href="" class="main-header__logo">AATMTA</a>
+        <h1 href="" class="main-header__logo">AATMTA</h1>
         <nav class="main-header__nav">
             <ul class="main-header__list">
                 <li class="main-header__item">
-                    <a href="" class="main-header__link">Home</a>
+                    <a href="#" class="main-header__link">Home</a>
                 </li>
                 <li class="main-header__item">
                     <a href="" class="main-header__link">Shop</a>
@@ -48,13 +48,13 @@
     </header>
 
     <section>
-        <div class="container">
+        <div class="">
             <div>
                 <div class="card-info">
                     <div class="col-lg-3 card-info__element">
                         <div class="card-info__element-space">
                             <div class="card-info__text">
-                                <h1>1</h1>
+                                <h1 class="card-info__title">1</h1>
                             </div>
 
                             <p>
@@ -65,17 +65,17 @@
                     <div class="col-lg-3 card-info__element">
                         <div>
                             <div class="card-info__text">
-                                <h1>2</h1>
+                                <h1 class="card-info__title">2</h1>
                             </div>
-                            <p>
+                            <p class="card-info__p">
                                 Los ordenadores son inútiles. Sólo pueden darte respuestas
                             </p>
                         </div>
                     </div>
                     <div class="col-lg-3 card-info__element">
-                        <div>
+                        <div class="card-info__element-center">
                             <div class="card-info__text">
-                                <h1>3</h1>
+                                <h1 class="card-info__title" >3</h1>
                             </div>
                             <div class="card-info__parra">
                                 <p>
@@ -100,10 +100,10 @@
                         <div class="section-card__img">
                             <img class="card-image__img" src="image/atardecer-1.jpg" alt="" />
                             <div class="card-image__img-txt">
-                                <h4>Hoja</h4>
+                                <h4 class="card-image__img-title">Hoja</h4>
                             </div>
                             <div class="card-title__p">
-                                <h1>Nueva coleccion</h1>
+                                <h1 class="card-image__img-title">Nueva coleccion</h1>
                             </div>
                             <div class="card-title__btn">
                                 <a href="#" class="card-title__a">
@@ -120,10 +120,10 @@
                         <div class="section-card__img">
                             <img class="card-image__img" src="image/atardecer-2.jpg" alt="" />
                             <div class="card-image__img-txt">
-                                <h4>Ciudad</h4>
+                                <h4 class="card-image__img-title">Ciudad</h4>
                             </div>
                             <div class="card-title__p">
-                                <h1>Nueva coleccion</h1>
+                                <h1 class="card-image__img-title">Nueva coleccion</h1>
                             </div>
                             <div class="card-title__btn">
                                 <a href="#" class="card-title__a">
@@ -217,6 +217,16 @@
                 </div>
                 <div class="imagen">
                     <img class="container-imagen__t" src="image/code-8.jpg" alt="">
+                    <div class="overlay">
+                        <div class="overlay-icon">
+                            <i class="fa fa-heart-o"></i>
+                            <i class="fa fa-search"></i>
+                            <i class="fa fa-star-o"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="imagen">
+                    <img class="container-imagen__t" src="image/code.jpg" alt="">
                     <div class="overlay">
                         <div class="overlay-icon">
                             <i class="fa fa-heart-o"></i>
